<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/restName"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="90dp"
        android:text="@string/restaurant" />

    <ImageView
        android:id="@+id/restPic"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/restDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="310dp"
        android:text="@string/distance" />

    <TextView
        android:id="@+id/restAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="90dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/restRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="90dp"
        android:text="@string/rating" />


    <TextView
        android:id="@+id/restNumRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="188dp"
        android:text="@string/numRates" />

    <TextView
        android:id="@+id/restPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="310dp"
        android:text="@string/price" />

    <TextView
        android:id="@+id/restCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="310dp"
        android:text="@string/category" />

</RelativeLayout>