<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pref_food"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:hint="@string/lookingFor"
        android:gravity="center"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6" />

    <EditText
        android:id="@+id/pref_mile"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:hint="@string/milePlace"
        android:gravity="center"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6" />

    <EditText
        android:id="@+id/pref_price"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:hint="@string/prices"
        android:gravity="center"
        android:textSize="32dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/white"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:id="@+id/done"
        android:text="@string/search"
        android:textSize="22dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="135dp">
    </Button>

</LinearLayout>