<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/favorites"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="100dp"
        android:textSize="20dp"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/favs"/>

    <Button
        android:id="@+id/search"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="100dp"
        android:textSize="20dp"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/search"/>

    <Button
        android:id="@+id/map"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="100dp"
        android:textSize="20dp"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/map"/>

</LinearLayout>
